--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -41,19 +41,17 @@
       <ion-col col-12> </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col col-12>Usted ha capturado 03 cuestionarios</ion-col>
+      <ion-col col-12>En el dispositivo se ha capturado un total de {{cuesTotal}} cuestionarios</ion-col>
     </ion-row>
     <ion-row>
-      <ion-col col-12>Usted ha sincronizado 02 cuestionatios</ion-col>
+      <ion-col col-12>En el dispositivo se han sincronizado un total de  {{cuesTotal - cuesPen}} cuestionarios</ion-col>
     </ion-row>
     <ion-row>
-      <ion-col col-12>Cuestionatios a sincronizar: 01</ion-col>
+      <ion-col col-12>En el dispositivo faltan por sincronizar un total de  {{cuesPen}} cuestionarios</ion-col>
     </ion-row>
   </ion-grid>
 
-
-
-  <ion-label text-right>Version 0.9.1</ion-label>
+  <ion-label text-right>Version 0.9.9</ion-label>
 
 </ion-content>
 
