arreglo de los checks en revisión y geolocalización

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -38,24 +38,22 @@
       <ion-col col-4></ion-col>
     </ion-row>
     <ion-row>
-      <ion-col col-12> </ion-col>
+      <ion-col col-12>En el dispositivo se encuentra un total de  {{notCompleted}} cuestionarios sin finalizar </ion-col>
     </ion-row>
     <ion-row>
       <ion-col col-12>En el dispositivo se ha capturado un total de {{cuesTotal}} cuestionarios</ion-col>
     </ion-row>
     <ion-row>
-      <ion-col col-12>En el dispositivo se han sincronizado un total de  {{cuesTotal - cuesPen}} cuestionarios</ion-col>
+      <ion-col col-12>En el dispositivo se han sincronizado un total de  {{cuesSync}} cuestionarios</ion-col>
     </ion-row>
     <ion-row>
       <ion-col col-12>En el dispositivo faltan por sincronizar un total de  {{cuesPen}} cuestionarios</ion-col>
     </ion-row>
   </ion-grid>
 
-  <ion-label text-right>Version 1.0.2</ion-label>
+  <ion-label text-right>Fecha de última actualización de catalogos {{fechaSync }}   Version 1.1</ion-label>
 
 </ion-content>
-
-
 
 
 
