--- a/src/pages/survey/survey.html
+++ b/src/pages/survey/survey.html
@@ -170,7 +170,9 @@
                         <!-- 4.- texto abierto -->
                         <ion-item *ngSwitchCase=4>
                           <ion-label floating>Escriba su respuesta (Texto)</ion-label>
-                          <ion-textarea type="text" [(ngModel)]="answer.childText" (input)="childTextChanged()"></ion-textarea>
+
+                          <textarea rows="3" type="text" [(ngModel)]="answer.childText" (input)="childTextChanged()"></textarea>
+            
                         </ion-item>
 
                         <!-- 5.- opcion multiple con pondereaciones -->
@@ -181,9 +183,10 @@
                                 <ion-label class="sentence">{{optChild.enunciado}}</ion-label>
                               </ion-item>
                             </ion-col>
+                         
                             <ion-col *ngIf="survey.type== 2"  >
                               <div>
-                                <ion-input placeholder="Ingrese cantidad en gr" type="number" [(ngModel)]="answer.childMap[optChild.id]" (input)="childMapChanged()"></ion-input>
+                                <ion-input placeholder="Ingrese cantidad en gr"  type="number" [(ngModel)]="answer.childMap[optChild.id]" (input)="childMapChanged()"></ion-input>
                               </div>
                             </ion-col>
                             <ion-col *ngIf="survey.type== 1"  >
