some revision fixes

--- a/src/pages/revision/revision.html
+++ b/src/pages/revision/revision.html
@@ -46,22 +46,33 @@
 							<p>{{opt.enunciado}}</p>
 							<div class="control_indicator"></div>
 
-							<div class="respuestas" *ngIf="opt.childNumber" >
+							<div class="respuestas" *ngIf="answer.childNumber && answer.option == opt" >
 								<ul>
-									<li>{{opt.childNumber}}</li>
+									<li>{{answer.childNumber}}</li>
 								</ul>
 							</div>
 
-							<div class="respuestas" *ngIf="opt.childText" >
+							<div class="respuestas" *ngIf="answer.childText && answer.option == opt" >
 								<ul>
-									<li>{{opt.childText}}</li>
+									<li>{{answer.childText}}</li>
 								</ul>
 							</div>
 
-							<div class="respuestas" *ngIf="opt.childOption" >
+							<div class="respuestas" *ngIf="(answer.childOption | json) != '{}' && answer.option == opt" >
 								<ul>
-									<li>{{opt.childOption}}</li>
+									<li>{{answer.childOption.enunciado}}</li>
 								</ul>
+							</div>
+
+							<div class="respuestas" *ngIf="(answer.childMap | json) != '{}' && answer.option == opt" >
+									<ul *ngFor="let item of getArrayValues(answer.childMap)" >
+										<li>{{item}}</li>
+									</ul>
+								</div>
+								<div class="respuestas" *ngIf="(answer.childOptions | json) != '[]' && answer.option == opt" >
+									<ul *ngFor="let childOption of answer.childOptions" >
+										<li>{{childOption.enunciado}}</li>
+									</ul>
 							</div>
 
 							<!-- <div class="respuestas" *ngIf="opt.childNumber || opt.childText || opt.childOption" >
