--- a/src/pages/survey/survey.html
+++ b/src/pages/survey/survey.html
@@ -139,15 +139,6 @@
                           </ion-row>
                         </div>
 
-
-                        <!-- 3.- combo box  -->
-                        <!-- <ion-item *ngSwitchCase=3>
-                        <ion-label>Seleccione Opciones</ion-label>
-                        <ion-select [(ngModel)]="answer.childOptions" interface="popover" multiple="true" cancelText="Cancel" okText="Okay" (ionChange)="childOptionsChanged()">
-                          <ion-option *ngFor="let optChild of opt.respuestas" [value]="optChild">{{optChild.enunciado}}</ion-option>
-                        </ion-select>
-                      </ion-item> -->
-
                         <!-- 3.- combo box  -->
                         <div *ngSwitchCase=3>
                           <ion-grid>
@@ -158,9 +149,9 @@
                                   <ion-checkbox (ionChange)="optionChecked(optChild)" [(ngModel)]="optChild.checked"></ion-checkbox>
                                 </ion-item>
                               </ion-col>
-                              <ion-col>
+                              <ion-col *ngIf="type == 2" >
                                 <div>
-                                  <ion-input placeholder="Cantidad" type="number" [(ngModel)]="optChild.text" [disabled]="!optChild.checked"></ion-input>
+                                  <ion-input placeholder="Cantidad (gramos)" type="number" [(ngModel)]="optChild.text" [disabled]="!optChild.checked"></ion-input>
                                 </div>
                               </ion-col>
                             </ion-row>
