--- a/src/pages/survey/survey.html
+++ b/src/pages/survey/survey.html
@@ -66,6 +66,9 @@
 
 
     <div>
+        <p class="sentence">
+            {{question.texto_anterior}} 
+          </p>
       <p class="sentence">
         {{question.indice}} {{question['enunciado']}}
       </p>
