Cambios en versión de prueba

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -48,14 +48,14 @@
 
 
   <hr>
-  <p class="cuestionarios_num">En el dispositivo se encuentra un total de <b>{{notCompleted}} </b> cuestionarios sin finalizar  </p>
+  <p class="cuestionarios_num">En el dispositivo se encuentran un total de <b>{{notCompleted}} </b> cuestionarios sin finalizar  </p>
   <p class="cuestionarios_num">En el dispositivo se ha capturado un total de <b>{{cuesTotal}} </b>cuestionarios</p>
   <p class="cuestionarios_num">En el dispositivo se han sincronizado un total de  <b>{{cuesSync}}</b> cuestionarios</p>
   <p class="cuestionarios_num">En el dispositivo faltan por sincronizar un total de <b> {{cuesPen}} </b>cuestionarios</p>
   
 
-  <p class="cuestionarios_num">Fecha de última actualización de catalogos <b>{{fechaSync }} </b> </p>
-  <ion-label text-right> Version 1.1</ion-label>
+  <p class="cuestionarios_num">Fecha de última actualización de catálogos <b>{{fechaSync }} </b> </p>
+  <ion-label text-right> Version 1.1.1 TEST </ion-label>
 
 </ion-content>
 
